# brank-backend

./: .claudeignore  .clauderules  .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  QUICKSTART.md  README.md  SETUP.md  TESTING.md  app.py  brank-backend.postman_collection.json  config.py  debug_config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  setup_db.sh  setup_gcp.sh  setup_staging_db.sh  worker.js
.claude/rules/: api-docs.md  architecture.md  code-style.md  database.md  pipeline.md
.github/workflows/: check-migrations.yml  check-postman.yml  deploy-staging.yml  deploy.yml  run-tests.yml
alembic/: README  env.py
alembic/versions/: 9cdc2643f295_add_brand_insight_requests_table.py  a1b2c3d4e5f6_add_aggregation_time.py  f917d9d152b9_initial_migration.py
api/: __init__.py  errors.py  routes.py  schemas.py
db/: __init__.py  models.py
db/repositories/: __init__.py  brand_repository.py  metrics_repository.py  prompt_repository.py  response_repository.py
docs/: ARCHITECTURE.md
extractors/: __init__.py  brand_extractor.py  citation_extractor.py  combined_extractor.py  sentiment_analyzer.py
llm_clients/: __init__.py  base.py  chatgpt.py  factory.py  gemini.py  grok.py  perplexity.py
services/: __init__.py  cache_service.py  landing_page_service.py  llm_query_service.py  metric_service.py  metrics_calculator.py  prompt_generation_service.py  response_processor.py  slack_service.py
tests/: __init__.py  conftest.py  test_api.py  test_extractors.py  test_metrics_calculator.py
utils/: __init__.py  logger.py  retry.py  text_utils.py  timing.py  url_utils.py
